# hipspec

./: .gitignore  .gitmodules  .travis.yml  Abs.hs  CoreLint.hs  CoreToRich.hs  DataConPattern.hs  Deappify.hs  Escape.hs  FreeTyCons.hs  FunctionalFO.hs  LintRich.hs  LintSimple.hs  Main.hs  PolyFOL.hs  PrettyAltErgo.hs  PrettyFO.hs  PrettyPolyFOL.hs  PrettyRich.hs  PrettySimple.hs  PrettyType.hs  PrettyUtils.hs  README.md  Read.hs  RemoveDefault.hs  Rich.hs  RichToSimple.hs  Scope.hs  Serve.hs  Simple.hs  SimpleToFO.hs  SimpleToPolyFOL.hs  SimplifyRich.hs  TODO  TODO.md  ToPolyFOL.hs  TyAppBeta.hs  Type.hs  TypedScope.hs  UnPtrLocalFO.hs  (+10 more)
FOL/: Pretty.hs  Syn.hs
Halt/: Data.hs  Lift.hs  LiftPlugin.hs  Monad.hs  Names.hs  Trans.hs  Util.hs
Lang/: CoreToRich.hs  Escape.hs  FreeTyCons.hs  Main.hs  PolyFOL.hs  PrettyAltErgo.hs  PrettyFO.hs  PrettyRich.hs  RemoveDefault.hs  Rich.hs  RichToSimple.hs  Simple.hs  SimpleToFO.hs  SimplifyRich.hs  ToPolyFOL.hs  TyAppBeta.hs  Type.hs  Unfoldings.hs  Utils.hs
comparison/: CountDrop.hs  CountRev.hs  Default.hs  Elem.hs  ElemFilterLenRev.hs  LemmasRequired.hs  ProductiveUseOfFailure2.hs  RevFilter.hs  Tree.hs  ZenoComparison.hs  ZenoComparison2.hs  ZenoComparison3.hs  ZenoComparison4.hs  ZenoComparison5.hs  ZenoComparison6.hs  countdrop  countrev  default-no-quickspec  elem  elemfilterlenrev  insertionsort  productiveuseoffailure  productiveuseoffailure2  revfilter  tree
docs/: Translation.tex  new-questions  questions
examples/: Assoc.hs  AssocSimple.hs  BExp.hs  BinLists.hs  CFG.hs  CFG2.hs  CFG3.hs  CFG4.hs  CFG6.hs  Char.hs  Class.hs  Collapse.hs  Concat.hs  Count.hs  Eval.hs  Flatten.hs  Flatten3.hs  GCD.hs  HOF.hs  InsertionSort.hs  Int.hs  IntList.hs  Integer.hs  IntegerList.hs  Integers.hs  Iterate.hs  Join.hs  List.hs  Makefile  Mergesort.hs  MergesortNat.hs  Mirror.hs  Nat.hs  Nichomachus.hs  NonZero.hs  Ordinals.hs  PQ.hs  Path2.hs  Properties.hs  QRev.hs  (+11 more)
examples/Challenges/: Arrays.hs  BExp.hs  DifficultRotate.hs  Integers.hs  Path2.hs  README.md  SameFringe.hs  SnocReverse.hs  SnocRotate.hs  integers
examples/Testing/: Implies.hs  Rotate.hs  Sanity.hs  TypeSig.hs
examples/cfg/: Balance.hs  CFG.hs  CFG2.hs  CFG3.hs  CFG4.hs  CFG42.hs  CFG5.hs  CFG6.hs  CFG6Char.hs  Dyck.hs  Dyck2.hs  Packrat.hs
examples/fpi/: MergesortCountNat.hs  MergesortNat.hs  MsortInts.hs  SelectionSort.hs  SelectionSortMaybe.hs  Sorting.hs
examples/hbmc/: DefinitionsHBMC.hs  Eval.hs  Flatten3.hs  Kaleidoscope.hs  List.hs  Makefile  Mergesort.hs  Nat.hs  Nats.hs  RegExp.hs  Type.hs  Untyped.hs
examples/hip/: Functions.hs  MonadMaybe.hs  MonadState.hs  NatAcc.hs  Ordinals.hs  Queues.hs
examples/old-examples/: Iterate.hs  MapIter.hs  MergeSort.hs  QuickSort.hs  README.md  Reverse.hs  Tree2.hs
examples/quickspec/: Count.hs  Integers.hs  Patricia.hs  ReverseAsFoldl.hs
examples/testing/: Inlining.hs  Overapplied.hs  TypeSig.hs
precision-recall/: Makefile  PrecisionRecall.hs
prod/: Definitions.hs  Makefile  result.json
prod/zeno_version/: Definitions.skeleton  PropT01.hs  PropT03.hs  PropT06.hs  PropT09.hs  PropT10.hs  PropT11.hs  PropT16.hs  PropT18.hs  PropT19.hs  PropT20.hs  PropT21.hs  PropT23.hs  PropT24.hs  PropT27.hs  PropT29.hs  PropT33.hs  PropT34.hs  PropT35.hs  PropT36.hs  PropT37.hs  PropT38.hs  PropT39.hs  PropT40.hs  PropT43.hs  PropT49.hs  PropT50.hs  Zeno.hs  zeno_json_wrapper.py
scratch/: Annotate.hs  FixLADR.hs  QCProps.hs  runwithprover9
src/: HipSpec.hs  Main.hs  Test
src/FOL/: Abstract.hs  LinTPTP.hs  Pretty.hs
src/Halo/: BackgroundTheory.hs  Binds.hs  Case.hs  Class.hs  Conf.hs  Constraints.hs  Data.hs  Deappify.hs  Entry.hs  ExprTrans.hs  Fetch.hs  FreeTyCons.hs  Lift.hs  LiftPlugin.hs  Monad.hs  MonoType.hs  Names.hs  Pointer.hs  PrimCon.hs  RemoveDefault.hs  Shared.hs  Subtheory.hs  Trans.hs  Trim.hs  Unfoldings.hs  Util.hs
src/Halt/: Case.hs  Common.hs  Conf.hs  Constraints.hs  Data.hs  Entry.hs  ExprTrans.hs  Lift.hs  Monad.hs  Names.hs  PrimCon.hs  Shared.hs  Subtheory.hs  Trans.hs  Trim.hs  Util.hs  Utils.hs
src/Hip/: Annotations.hs  BuiltinTypes.hs  HipSpec.hs  Induction.lhs  Init.hs  InvokeATPs.hs  MakeInvocations.hs  Messages.hs  Params.hs  Prelude.hs  Provers.hs  ResultDatatypes.hs  RunProver.hs  SpecMain.hs  StringMarshal.hs  StructuralInduction.hs  StructuralInduction.lhs  Util.hs
src/HipSpec/: BuiltinTypes.hs  Complement.hs  Execute.hs  FixpointInduction.hs  Fuel.hs  HBMC.hs  Id.hs  Induction.hs  Induction.lhs  Init.hs  Lemma.hs  Lint.hs  Literal.hs  Main.hs  MainLoop.hs  MakeInvocations.hs  MakeProofs.hs  Messages.hs  Monad.hs  Params.hs  ParseDSL.hs  Prelude.hs  PrepareVar.hs  Pretty.hs  Property.hs  Read.hs  Reasoning.hs  StringMarshal.hs  Theory.hs  ThmLib.hs  Translate.hs  Trim.hs  UnfoldPlugin.hs  Unify.hs  Utils.hs  Void.hs
src/Language/: TPTP.hs
src/Test/: QuickSpec.hs
talks/atx-presentation/: QRev.hs  code.sty  eqclasses.tex  hipspec-picture.tex  presentation.tex  terms.tex
talks/cade/: QRev.hs  abbrev.sty  callgraph.tex  hipspec-picture.tex  presentation.tex  prooftree.sty
talks/ciao-presentation/: Demo.hs  Demo2.hs  Demo3.hs  hipspec-picture.tex  presentation.tex
talks/grammars/: Makefile  (+1 more)
test/: App.hs  CAFCase.hs  Conflict.hs  Contract.hs  Contracts.hs  CoreTest.hs  DataList.hs  DepthTwoCase.hs  Eq.hs  Fix.hs  Guards.hs  Lam.hs  Length.hs  Let.hs  LiftTest.hs  Lists.hs  ListsAndLambdas.hs  Mutual.hs  Nat.hs  Not.hs  RetPtr.hs  Risers.hs  Shadowing.hs  SimpleTypeClass.hs  State.hs  TC.hs  UnreachableCase.hs  Vardep.hs  Xor.hs
tests/: BExp.hs  BinLists.hs  ConstLetLambda.hs  DataList.hs  Defaults.hs  Eithers.hs  Filter.hs  Inner.hs  Integer.hs  Lambdas.hs  List.hs  Map.hs  Merge.hs  Nat.hs  Ordinals.hs  Partition.hs  Patterns.hs  PuoF.hs  Rank2.hs  Sections.hs  Shadowing.hs  SimpleLet.hs  SomePrelude.hs  TypeSynonym.hs  run_tests.sh
testsuite/: Count.hs  ListMonad.hs  Makefile  Makefile.common  Nat.hs  Reverse.hs  Rotate.hs
tfp1/: .travis.yml  HipSpec.hs  hipspec.cabal  rename.sh  tfp1.cabal
travis/: cabal-apt-install
zeno/: Properties.hs
(+915 files in other folders)
