name:               hipspec
category:           Theorem Provers
version:            0.6
license:            GPL-3
author:             Dan Rosén
maintainer:         Dan Rosén <danr@chalmers.se>
homepage:           http://www.github.com/danr/hipspec
bug-reports:        http://www.github.com/danr/hipspec/issues
build-type:         Simple
cabal-version:      >= 1.6
tested-with:        GHC == 7.4.1, GHC == 7.6.1
synopsis:           HipSpec: prove properties of Haskell programs, with theory exploration from QuickSpec

source-repository head
    type: git
    location: git://github.com/danr/hipspec.git

flag Werror
    default: False
    manual: True

library
    ghc-options:    -Wall
    if flag(Werror)
        ghc-options: -Werror
    hs-source-dirs: src
    exposed-modules:
        HipSpec.Prelude

    build-depends:
        base                          >= 4    && < 5,
        QuickCheck                    >= 2.4,
        quickspec                     == 0.9.1


executable hipspec
    ghc-options:    -threaded -Wall -rtsopts -package ghc
    if flag(Werror)
        ghc-options: -Werror
    hs-source-dirs: src

    main-is: HipSpec.hs

    other-modules:
        Halo.BackgroundTheory
        Halo.Binds
        Halo.Case
        Halo.Conf
        Halo.Constraints
        Halo.Deappify
        Halo.Entry
        Halo.ExprTrans
        Halo.Fetch
        Halo.FOL.Abstract
        Halo.FOL.Internals.Internals
        Halo.FOL.LineariseSMT
        Halo.FOL.Operations
        Halo.FreeTyCons
        Halo.Lift
        Halo.Monad
        Halo.MonoType
        Halo.Names
        Halo.Pointer
        Halo.RemoveDefault
        Halo.Shared
        Halo.Subtheory
        Halo.Trim
        Halo.Util
        HipSpec.Execute
        HipSpec.ATP.Invoke
        HipSpec.ATP.Provers
        HipSpec.ATP.Results
        HipSpec.Heuristics.Associativity
        HipSpec.Init
        HipSpec.MainLoop
        HipSpec.MakeInvocations
        HipSpec.Messages
        HipSpec.Monad
        HipSpec.Params
        HipSpec.Reasoning
        HipSpec.StringMarshal
        HipSpec.Trans.ApproximationLemma
        HipSpec.Trans.DefinitionalEquations
        HipSpec.Trans.Induction
        HipSpec.Trans.Lemma
        HipSpec.Trans.Literal
        HipSpec.Trans.MakeProofs
        HipSpec.Trans.MakerMonad
        HipSpec.Trans.Obligation
        HipSpec.Trans.Property
        HipSpec.Trans.QSTerm
        HipSpec.Trans.SrcRep
        HipSpec.Trans.Theory
        HipSpec.Trans.Types
        HipSpec.Trans.Unify

    build-depends:
        -- Shared
        base                          >= 4    && < 5,
        mtl                           >= 2.1.2,
        transformers                  >= 0.3,
        containers                    >= 0.3,
        geniplate                     >= 0.6,
        time,
        aeson,
        bytestring,
        logict,
        void                          >= 0.5.3,

        -- Command-line arguments
        cmdargs                       >= 0.9,

        -- Messages
        ghc-prim,

        -- Halo
        bimap                         >= 0.2,
        ghc-paths                     >= 0.1,
        filepath                      >= 1.0,
        dlist                         >= 0.5,

        -- Structural Induction
        structural-induction          >= 0.1 && < 0.2,
        pretty                        >= 1.0,

        -- Running Theorem Provers
        stm-promise                   == 0.0.2,
        process                       >= 1.0.1.1,
        stm                           >= 2.0,
        directory                     >= 1.0,
        split                         >= 0.1,

        -- QuickSpec
        quickspec                     == 0.9.1

