name:                hipspec
category:            Theorem Provers
version:             3.0
synopsis:            HipSpec
homepage:            http://github.com/danr/hipspec
license:             GPL-3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
homepage:            http://www.github.com/danr/hipspec
bug-reports:         http://www.github.com/danr/hipspec/issues
category:            Language
build-type:          Simple
cabal-version:       >=1.6
tested-with:         GHC == 7.4.1, GHC == 7.6.3
synopsis:            HipSpec: prove properties of Haskell programs, with theory exploration from QuickSpec
description:         Upp till bevis!

source-repository head
    type: git
    location: git://github.com/danr/hipspec.git

flag Werror
    default: False
    manual: True

flag JSON
    default: False
    manual: True

library
    hs-source-dirs: src

    ghc-options:    -Wall

    if flag(Werror)
        ghc-options: -Werror

    exposed-modules:
        HipSpec

    build-depends:
        base                 >= 4    && < 5,
        QuickCheck           >= 2.5,
        quickspec            == 0.9.2

executable hipspec
    hs-source-dirs: src

    main-is:         HipSpec/Main.hs

    if flag(JSON)
        cpp-options: -DSUPPORT_JSON
        build-depends:
            aeson >= 0.6, bytestring

    if flag(Werror)
        ghc-options: -Werror
    ghc-options:     -threaded -Wall -rtsopts -package ghc -auto-all

    build-depends:
        base                 >= 4 && < 5,
        ghc-paths            == 0.1.*,
        containers           >= 0.4,
        -- mtl-2.1 contains a severe bug
        mtl >= 2.0 && < 2.1 || >= 2.1.1 && < 2.2,
        pretty               >= 1.1,
        geniplate            >= 0.6,
        void                 >= 0.5.3,
        transformers         >= 0.3,
        split                >= 0.1,
        pretty-show          >= 1.5,

        ghc-prim,

        -- Deriving Arbitary
        derive,

        -- QuickSpec
        quickspec            == 0.9.2,
        unification-fd       >= 0.8,

        -- Printing messages
        time                 >= 1.4,

        -- Command-line arguments
        cmdargs              >= 0.9,

        -- Structural induction
        structural-induction == 0.1,

        -- Running Theorem Provers
        stm-promise          == 0.0.2,
        process              >= 1.0.1.1,
        stm                  >= 2.3,
        directory            >= 1.0,
        filepath             >= 1.0

